# hephfx

./: .gitignore  README.md  go.mod  go.sum
ctxkeys/: ctx_keys.go
example/: readme.md
example/protos/: hello.proto
gutils/: utils.go
hestia/: discovery.go  netaddr.go  netaddr_test.go  readme.md  registry.go  service_entity.go  service_entity_test.go
hestia/consul/: discovery.go  option.go  readme.md  registry.go  registry_test.go  resolver.go  resolver_test.go
hestia/etcd/: discovery.go  etcd.go  option.go  readme.md  registry.go  registry_test.go  resolver.go  resolver_test.go
logger/: .gitignore  convert.go  convert_test.go  default.go  default_test.go  logger_test.go  readme.md  sentry.go  utils.go  zap_logger.go  zap_option.go
logger/example/: main.go
micro/: conn.go  ctx_keys.go  gutils.go  logger.go  md_test.go  micro.go  option.go  readme.md  router.go  signals.go
micro/bridge/: bridge_test.go  client.go  config.go  doc.go  options.go  readme.md  response.go  service.go
micro/gclient/: client.go
monitor/: monitor_test.go  prometheus.go
rs-hestia/: Cargo.toml  readme.md
rs-hestia/src/: discovery.rs  error.rs  lib.rs  netaddr.rs  registry.rs  service.rs
rs-hestia/src/consul/: discovery.rs  mod.rs  options.rs  readme.md  registry.rs  resolver.rs
rs-hestia/src/etcd/: discovery.rs  mod.rs  options.rs  registry.rs  resolver.rs
rs-hestia/tests/: consul_integration.rs  etcd_integration.rs
settings/: app.test.yaml  config.go  readme.md  settings_test.go  viper_config.go
slogger/: ctx_key.go  option.go  readme.md  slog.go  slog_test.go
(+18 files in other folders)
