[package]
name = "rs-hestia"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
etcd-client = "0.19.0"
if-addrs = "0.15.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tonic = "0.14.6"
tracing = "0.1.44"
uuid = { version = "1.23.3", features = ["v4"] }
