[package]
name = "rs-hestia"
version = "0.1.3"
edition = "2024"
authors = ["daheige"]
description = "rust hestia"
keywords = ["rs-hestia", "hestia", "rust-hestia", "hestia", "rs-etcd"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/daheige/hephfx"
documentation = "https://docs.rs/rs-hestia/"

[dependencies]
async-trait = "0.1.89"
etcd-client = "0.19.0"
if-addrs = "0.15.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tonic = "0.14.6"
log = "0.4"
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11"
